[package]
name = "beeminder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.7.*"
structopt = "0.3.13"
tokio = { version = "1.15", features = ["full"] }
regex = "1"
