[package]
name = "beeminder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4", features = ["serde"]}
env_logger = "0.7.*"
log = "0.4.14"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.13"
tokio = { version = "1.15", features = ["full"] }
confy = "0.4.0"
